3.0.30
 * Do not set RPC_READY to false on transports shutdown in order to not fail counter updates for deployments with coordinator and storage nodes with transports turned off (CASSANDRA-18935)
 * Suppress CVE-2023-44487 (CASSANDRA-18943)
 * Fix nodetool enable/disablebinary to correctly set rpc readiness in gossip (CASSANDRA-18935)
 * Implement the logic in bin/stop-server (CASSANDRA-18838) 
 * Upgrade snappy-java to 1.1.10.4 (CASSANDRA-18878)
 * Add cqlshrc.sample and credentials.sample into Debian package (CASSANDRA-18818)
 * Refactor validation logic in StorageService.rebuild (CASSANDRA-18803)
 * Make alternation of a user type validate the same way as creation of a user type does (CASSANDRA-18585)
 * Backport of CASSANDRA-16905 Further restrict schema column drop/recreate conversions (CASSANDRA-18760)
 * CQLSH emits a warning when the server version doesn't match (CASSANDRA-18745)
 * Fix missing speculative retries in tablestats (CASSANDRA-18767)
 * Fix Requires for Java for RPM package (CASSANDRA-18751)
 * Fix CQLSH online help topic link (CASSANDRA-17534)
 * Remove unused suppressions (CASSANDRA-18724)
 * Upgrade OWASP to 8.3.1 (CASSANDRA-18650)
 * Suppress CVE-2023-34462 (CASSANDRA-18649)
 * Add support for AWS Ec2 IMDSv2 (CASSANDRA-16555)
 * Suppress CVE-2023-35116 (CASSANDRA-18630)
 * Pass taskId from CompactionTask to system.compaction_history (CASSANDRA-12183)
 * Suppress CVE-2023-34455, CVE-2023-34454, CVE-2023-34453 (CASSANDRA-18608)
 * Backport CASSANDRA-10508: Remove hard-coded SSL cipher suites (CASSANDRA-18575)
 * Suppress CVE-2023-2976 (CASSANDRA-18562)
 * Remove dh_python use in Debian packaging (CASSANDRA-18558)
 * Pass down all contact points to driver for cassandra-stress (CASSANDRA-18025)
 * Validate the existence of a datacenter in nodetool rebuild (CASSANDRA-14319)

3.0.29
 * Suppress CVE-2023-2251 (CASSANDRA-18497)